<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VanetBroadcast</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="start">Start</string>
	<string name="reset">Reset</string>
	<string name="sendcountlabel">Send Count:</string>
	<string name="sendintervallabel">Send Interval(ms):</string>
	<string name="smallsize">Small</string>
	<string name="mediansize">Median</string>
	<string name="bigsize">Big</string>
	<string name="largesize">Large</string>
	<string name="recvdatafolder">VanetRecvData</string>
		
</resources>